updated to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://safeco.github.io/react-e-commerce",
+  "homepage": "https://safeco.github.io/react-e-commerce",
   "name": "react-e-commerce",
   "version": "0.1.0",
   "private": true,
